After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709754 - audioringbuffer: Clears need_reorder flag wrongly
audioringbuffer: Clears need_reorder flag wrongly
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.2.0
Other Linux
: Normal normal
: 1.2.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-10-09 16:39 UTC by Takashi Iwai
Modified: 2013-10-10 10:40 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix patch (1.31 KB, patch)
2013-10-09 16:39 UTC, Takashi Iwai
committed Details | Review

Description Takashi Iwai 2013-10-09 16:39:04 UTC
Created attachment 256836 [details] [review]
Fix patch

gst_audio_ring_buffer_set_channel_positions() checks whether the given
positions are identical with the current setup and returns
immediately if so.  But it also clears need_reorder flag before this
comparison, thus this flag might be wrongly cleared if the function is
called twice with the same channel positions.

The fix patch is attached below.
Comment 1 Sebastian Dröge (slomo) 2013-10-09 17:01:33 UTC
Will backport to 1.2 later.

commit 6d659e3c6fe978e0400ab21d317504d18642e759
Author: Takashi Iwai <tiwai@suse.de>
Date:   Tue Oct 8 16:02:46 2013 +0200

    audioringbuffer: Don't clear need_reorder flag too early
    
    gst_audio_ring_buffer_set_channel_positions() checks whether the given
    positions are identical with the current setup and returns
    immediately if so.  But it also clears need_reorder flag before this
    comparison, thus this flag might be wrongly cleared if the function is
    called twice with the same channel positions.
    
    Move the flag clearance after the check.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=709754